[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/dreamscape/CombatElements/CombatSignifier.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/dreamscape/ArtifactChoiceObject.gd" type="Script" id=2]

[node name="ArtifactChoiceObject" groups=["artifact_choice_objects"] instance=ExtResource( 1 )]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
script = ExtResource( 2 )
icon_container_texture = null
icon_extra_container_texture = null

[node name="Signifier" parent="." index="0"]
margin_right = 120.0
margin_bottom = 120.0

[node name="Label" parent="Signifier" index="0"]
margin_left = 42.0
margin_top = 42.0
margin_right = 78.0
margin_bottom = 78.0

[node name="IconContainer" parent="Signifier" index="1"]
margin_left = 40.0
margin_top = 40.0
margin_right = 80.0
margin_bottom = 80.0

[node name="ExtraContainer" parent="Signifier" index="2"]
visible = false
margin_left = 37.0
margin_top = 37.0
margin_right = 82.0
margin_bottom = 82.0

[node name="Icon" parent="Signifier" index="3"]
margin_left = 0.0
margin_top = 0.0
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )

[node name="BackBufferCopy" type="BackBufferCopy" parent="." index="3"]
visible = false
copy_mode = 2
rect = Rect2( 0, 0, 120, 120 )

[node name="ShaderEffect" type="ColorRect" parent="." index="4"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 120 )

[connection signal="gui_input" from="." to="." method="_on_JournalArtifactChoice_gui_input"]
